<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_several_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_et_hint"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_several_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_several_btn_text"
        android:enabled="false"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/remove_several_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_several_btn_text"
        android:enabled="false"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_several_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/add_single_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_single_btn_text"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/remove_several_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/remove_single_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_single_btn_text"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_single_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>